// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<p
  className="root"
>
  hello
</p>
`;

exports[`Header renders correctly with className 1`] = `
<p
  className="root foo"
>
  hello
</p>
`;
